# ftlk-dashboard

./: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.armel  Dockerfile.armv6  Dockerfile.pi1  Dockerfile.ub  README.md  build.sh  config.xml  dock.sh  install.sh  rxc.sh  t.c  v6.sh
.cargo/: .config.toml.swp  config.toml
save/: Dockerfile.armel  build.sh  dockcross-linux-armv6  pi.txt  pub_button.rs  sub_label.rs  t  table_redis.rs
src/: config copy.yaml  config.yaml  gui.json  limero  main.rs  mqtt.yaml  mqtt_bridge.rs  my_logger.rs  my_widget.rs  proto.json  pubsub_widget.rs  redis_bridge.rs  stream.rs  vac.sh  xml
src/config/: file_change.rs  file_loader.rs  file_xml.rs  mod.rs
src/decl/: mod.rs
src/decl/widget/: gauge.rs  mod.rs  status.rs
src/limero/: limero.rs  mod.rs  redis.rs
src/logger/: mod.rs
src/pubsub/: config_util.rs  mod.rs  mqtt_bridge.rs  mqtt_pubsub.rs  redis_bridge.rs  zenoh_pubsub.rs
src/store/: mod.rs  sub_table.rs
src/widget/: broker_alive.rs  gauge.rs  mod.rs  pub_button.rs  status.rs  sub_chart.rs  sub_gauge.rs  sub_label.rs  sub_plot.rs  sub_status.rs  sub_text.rs
