[package]
name = "fltk-dashboard"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
fltk = { version = "1.4.9", features = [] }
fltk-grid = "0.3.1"
fltk-table = "0.3.0"
fltk-theme = "0.7"
regex = "*"
serde = "1.0.163" # for a turtle description
serde_yaml = "0.9.25" # for a yaml description
log = "0.4.14" # for logging
simplelog = "0.12.1" # for logging
env_logger = "0.10.0"
redis = { git = "https://github.com/redis-rs/redis-rs", branch = "resp3",features = ["tokio-comp"] }
chrono = "0.4.19" # for time
mqtt-async-client = "0.3.1" # for mqtt
notify = "6.1.1"
serde_derive = "1"
evalexpr="*"
lazy_static="*"