[package]
name = "fltk-dashboard"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
fltk = { version = "1.4.32", features = [] }
fltk-grid = "0.4.0"
fltk-table = "0.3.1"
fltk-theme = "0.7"
regex = "*"
serde = "1.0.163" 
serde_yaml = "0.9.25" 
serde-xml-rs = { version="0.6.0" }
log = "*" 
simplelog = "0.12.1" 
env_logger = "0.11.3"
redis = { git = "https://github.com/redis-rs/redis-rs", branch = "resp3",features = ["tokio-comp"] }
chrono = "0.4.38" # for time
mqtt-async-client = "0.3.1" # for mqtt
notify = "6.1.1"
serde_derive = "1"
evalexpr="*"
rand="*"
plotters = "0.3.6"
plotters-bitmap = "0.3.6"
minidom="*"
minicbor = { version = "0.24.2", features=["derive","alloc","half"] }
pathfinder_simd = { git = "https://github.com/pbdeuchler/pathfinder", branch = "main" }